--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
+version: "3.8"
+
 services:
-  traefik:
-    image: "traefik:v3.2"
-    container_name: "traefik"
-    command:
-      - "--configfile=/etc/traefik/traefik.yml"
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    restart: unless-stopped
     ports:
-      - "443:443"
-      - "8080:8080"
       - "80:80"
+      - "443:443"
     volumes:
-      - "./letsencrypt:/letsencrypt"
-      - "./traefik.yml:/etc/traefik/traefik.yml:ro"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./letsencrypt:/etc/letsencrypt
+    depends_on:
+      - ollama
+      - open-webui
 
   ollama:
     image: ollama/ollama
@@ -19,31 +21,18 @@ services:
     restart: unless-stopped
     environment:
       - OLLAMA_HOST=0.0.0.0
-
     volumes:
-      - ./ollama-data:/root/.ollama  # Shared volume for models
+      - ./ollama-data:/root/.ollama
     ports:
       - "11434:11434"
-      # - "80:11434"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.ollama.rule=Host(`${DOMAIN}`) && (PathPrefix(`//ollama/`) || PathPrefix(`/ollama`))"
-
-      - "traefik.http.middlewares.ollama-strip.stripprefix.prefixes=/ollama"
-      - "traefik.http.middlewares.ollama-strip.stripprefix.forceslash=false"
-      - "traefik.http.routers.ollama.middlewares=ollama-strip@docker"
-
-      - "traefik.http.routers.ollama.entrypoints=websecure"
-      - "traefik.http.routers.ollama.tls.certresolver=myresolver"
-      - "traefik.http.services.ollama.loadbalancer.server.port=11434"
 
   ollama-model-loader:
-    image: docker:latest  # 🔥 Uses Docker CLI instead of Ollama
+    image: docker:latest
     container_name: ollama-model-loader
     depends_on:
       - ollama
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock  # 🔥 Allows running commands inside containers
+      - /var/run/docker.sock:/var/run/docker.sock
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
@@ -54,7 +43,6 @@ services:
         echo "📥 Pulling models inside Ollama container..."
         docker exec ollama ollama pull gemma:2b
         docker exec ollama ollama pull deepseek-r1:1.5b
-
         docker exec ollama ollama pull qwen2.5-coder:1.5b
         docker exec ollama ollama pull codegemma:2b
         docker exec ollama ollama pull phi4-mini
@@ -62,7 +50,6 @@ services:
         docker exec ollama ollama pull llama3.3
         docker exec ollama ollama pull qwen2.5:14b
         docker exec ollama ollama pull qwen2.5-coder:14b
-
         echo "✅ Models downloaded. Exiting..."
     restart: "no"
 
@@ -73,17 +60,11 @@ services:
     depends_on:
       - ollama
     environment:
-      - OLLAMA_BASE_URLS=http://ollama:11434 #comma separated ollama hosts
+      - OLLAMA_BASE_URLS=http://ollama:11434
       - ENV=dev
       - WEBUI_AUTH=False
       - WEBUI_SECRET_KEY=t0p-s3cr3t
     ports:
-      - "8080"  # Exposing Open WebUI
+      - "8080:8080"
     volumes:
-      - ./webui-data:/app/data  # Persisting WebUI data
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.webui.rule=Host(`${DOMAIN}`) && PathPrefix(`/`)"
-      - "traefik.http.routers.webui.entrypoints=websecure"
-      - "traefik.http.routers.webui.tls.certresolver=myresolver"
-      - "traefik.http.services.webui.loadbalancer.server.port=8080"
+      - ./webui-data:/app/data
