--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,10 @@ http {
         listen 80;
         server_name ${DOMAIN};
 
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
         location /ollama/ {
             proxy_pass http://ollama:11434/;
             proxy_set_header Host $host;
