--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,19 @@ services:
   certbot:
     image: certbot/certbot
     container_name: certbot
+    depends_on:
+      - nginx
     volumes:
       - ./letsencrypt:/etc/letsencrypt
       - ./certbot-data:/var/www/certbot
     entrypoint: ["/bin/sh", "-c"]
     command: |
-      certbot certonly --webroot -w /var/www/certbot --email lfelipeapo@hotmail.com --agree-tos --no-eff-email --force-renewal -d ${DOMAIN} || true
+      echo "⏳ Aguardando NGINX iniciar..."
+      sleep 5
+      echo "🔐 Solicitando certificado SSL para ${DOMAIN}..."
+      certbot certonly --webroot -w /var/www/certbot --email lfelipeapo@hotmail.com --agree-tos --no-eff-email --force-renewal -d ${DOMAIN}
+      echo "✅ Certificado gerado! Reiniciando NGINX..."
+      nginx -s reload || true
 
   ollama:
     image: ollama/ollama
