--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,44 @@
 version: "3.8"
 
 services:
-  # Serviço de inicialização para configurar permissões adequadas
   init-volumes:
     image: busybox
     container_name: init-volumes
     user: "0:0"
     volumes:
-      - ./letsencrypt:/data/letsencrypt
-      - ./certbot-data:/data/certbot-data
+      - ./letsencrypt:/etc/letsencrypt
+      - ./certbot-data:/var/www/certbot
     command: >
       sh -c "
-        mkdir -p /data/letsencrypt /data/certbot-data &&
-        chmod -R 755 /data/letsencrypt /data/certbot-data &&
+        mkdir -p /etc/letsencrypt /var/www/certbot &&
+        chmod -R 755 /etc/letsencrypt /var/www/certbot &&
         echo 'Diretórios inicializados com permissões corretas'
       "
     restart: "no"
+
+  nginx-http:
+    image: nginx:latest
+    container_name: nginx-http
+    restart: "no"
+    ports:
+      - "80:80"
+    depends_on:
+      - init-volumes
+    volumes:
+      - ./nginx/nginx-http.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot-data:/var/www/certbot
+    environment:
+      - DOMAIN=${DOMAIN:-olama.duckdns.org}
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./letsencrypt:/etc/letsencrypt
+      - ./certbot-data:/var/www/certbot
+    depends_on:
+      - nginx-http
+    command: certonly --webroot -w /var/www/certbot --email lfelipeapo@hotmail.com --agree-tos --no-eff-email --keep-until-expiring -d ${DOMAIN:-olama.duckdns.org} --non-interactive
 
   nginx:
     image: nginx:latest
@@ -25,42 +48,15 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
-      - init-volumes
+      - certbot
       - ollama
       - open-webui
     volumes:
-      - ./nginx/nginx.template:/etc/nginx/nginx.template:ro
-      - ./letsencrypt:/etc/letsencrypt
-      - ./certbot-data:/var/www/certbot
-    command: /bin/sh -c "envsubst '$$DOMAIN' < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./letsencrypt:/etc/letsencrypt:ro
+      - ./certbot-data:/var/www/certbot:ro
     environment:
-      - DOMAIN=${DOMAIN}
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ./letsencrypt:/etc/letsencrypt
-      - ./certbot-data:/var/www/certbot
-    depends_on:
-      - init-volumes
-      - nginx
-    entrypoint: ["/bin/sh", "-c"]
-    command: |
-      echo "⏳ Aguardando NGINX iniciar..."
-      sleep 15
-      echo "🔐 Solicitando certificado SSL para ${DOMAIN}..."
-      certbot certonly --webroot -w /var/www/certbot --email lfelipeapo@hotmail.com --agree-tos --no-eff-email --keep-until-expiring -d ${DOMAIN} --non-interactive
-      chmod -R 755 /etc/letsencrypt
-      echo "✅ Certificado gerado! Tentando reiniciar NGINX..."
-      # Usa o Docker API para reiniciar o Nginx sem precisar de acesso direto
-      wget -q --spider --tries=1 http://nginx/
-      echo "✅ Nginx pronto para usar os certificados!"
+      - DOMAIN=${DOMAIN:-olama.duckdns.org}
 
   ollama:
     image: ollama/ollama
@@ -92,7 +88,6 @@ services:
     command:
       - |
         echo "⏳ Aguardando Ollama iniciar completamente..."
-        # Loop aprimorado para verificar se o Ollama está pronto
         for i in {1..30}; do
           if docker exec ollama curl -s http://localhost:11434/api/tags >/dev/null 2>&1; then
             break
