--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,48 +1,43 @@
-events {}
+server {
+    listen 80;
+    server_name ${DOMAIN};
 
-http {
-    server {
-        listen 80;
-        server_name ${DOMAIN};
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location /ollama/ {
-            proxy_pass http://ollama:11434/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location / {
-            proxy_pass http://open-webui:8080/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
-    server {
-        listen 443 ssl;
-        server_name ${DOMAIN};
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
-        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+server {
+    listen 443 ssl;
+    server_name ${DOMAIN};
 
-        location /ollama/ {
-            proxy_pass http://ollama:11434/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+    ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
-        location / {
-            proxy_pass http://open-webui:8080/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+    location /ollama/ {
+        proxy_pass http://ollama:11434/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        proxy_pass http://open-webui:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
