--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,18 @@
 version: "3.8"
 
 services:
-  init-volumes:
-    image: busybox
-    container_name: init-volumes
-    user: "0:0"
-    volumes:
-      - ./letsencrypt:/etc/letsencrypt
-      - ./certbot-data:/var/www/certbot
-    command: >
-      sh -c "
-        mkdir -p /etc/letsencrypt /var/www/certbot &&
-        chmod -R 755 /etc/letsencrypt /var/www/certbot &&
-        echo 'Diretórios inicializados com permissões corretas'
-      "
-    restart: "no"
-
-  nginx-http:
-    image: nginx:latest
-    container_name: nginx-http
-    restart: "no"
-    ports:
-      - "81:80"
-    depends_on:
-      - init-volumes
-    volumes:
-      - ./nginx/nginx-http.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./certbot-data:/var/www/certbot
-    environment:
-      - DOMAIN=${DOMAIN:-olama.duckdns.org}
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ./letsencrypt:/etc/letsencrypt
-      - ./certbot-data:/var/www/certbot
-    depends_on:
-      - nginx-http
-    command: certonly --webroot -w /var/www/certbot --email lfelipeapo@hotmail.com --agree-tos --no-eff-email --keep-until-expiring -d ${DOMAIN:-olama.duckdns.org} --non-interactive
-
   nginx:
     image: nginx:latest
     container_name: nginx
     restart: unless-stopped
     ports:
-      - "81:80"
-      - "444:443"
+      - "81:80"       # HTTP
+      - "443:443"     # HTTPS (se necessário no futuro)
     depends_on:
-      - certbot
       - ollama
       - open-webui
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./letsencrypt:/etc/letsencrypt:ro
-      - ./certbot-data:/var/www/certbot:ro
     environment:
       - DOMAIN=${DOMAIN:-olama.duckdns.org}
 
@@ -68,8 +26,6 @@ services:
       - ./ollama-data:/root/.ollama
     ports:
       - "11435:11434"
-    depends_on:
-      - init-volumes
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:11435/api/tags || exit 1"]
       interval: 10s
@@ -85,23 +41,22 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     entrypoint: ["/bin/sh", "-c"]
-    command:
-      - |
-        echo "⏳ Aguardando Ollama iniciar completamente..."
-        for i in {1..30}; do
-          if docker exec ollama curl -s http://localhost:11435/api/tags >/dev/null 2>&1; then
-            break
-          fi
-          echo "Tentativa $$i: Ollama ainda não está pronto. Aguardando..."
-          sleep 10
-        done
-        
-        echo "📥 Baixando modelos dentro do container Ollama..."
-        for model in "gemma:2b" "deepseek-r1:1.5b" "qwen2.5-coder:1.5b" "codegemma:2b" "phi4-mini" "phi4" "llama3.3" "qwen2.5:14b" "qwen2.5-coder:14b"; do
-          echo "Baixando $$model..."
-          docker exec ollama ollama pull $$model
-        done
-        echo "✅ Modelos baixados com sucesso!"
+    command: |
+      echo "⏳ Aguardando Ollama iniciar completamente..."
+      for i in {1..30}; do
+        if docker exec ollama curl -s http://localhost:11435/api/tags >/dev/null 2>&1; then
+          break
+        fi
+        echo "Tentativa $$i: Ollama ainda não está pronto. Aguardando..."
+        sleep 10
+      done
+      
+      echo "📥 Baixando modelos dentro do container Ollama..."
+      for model in "gemma:2b" "deepseek-r1:1.5b" "qwen2.5-coder:1.5b" "codegemma:2b" "phi4-mini" "phi4" "llama3.3" "qwen2.5:14b" "qwen2.5-coder:14b"; do
+        echo "Baixando $$model..."
+        docker exec ollama ollama pull $$model
+      done
+      echo "✅ Modelos baixados com sucesso!"
     restart: "no"
 
   open-webui:
@@ -110,7 +65,6 @@ services:
     restart: unless-stopped
     depends_on:
       - ollama
-      - init-volumes
     environment:
       - OLLAMA_BASE_URLS=http://ollama:11435
       - ENV=dev
