--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
-    listen 81;
-    server_name ${DOMAIN};
+    listen 81 default_server;
+    listen [::]:81 default_server;
+    server_name _;  # 🔥 Permite qualquer domínio/IP acessar
 
     location / {
         proxy_pass http://open-webui:8080/;
@@ -13,7 +14,34 @@ server {
     }
 
     location /ollama/ {
-        proxy_pass http://ollama:11435/;
+        proxy_pass http://ollama:11434/;  # 🔥 Corrigida a porta interna do Ollama
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name _;  # 🔥 Permite qualquer domínio/IP acessar
+
+    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+
+    location / {
+        proxy_pass http://open-webui:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    location /ollama/ {
+        proxy_pass http://ollama:11434/;  # 🔥 Corrigida a porta interna do Ollama
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
