--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 server {
-    listen 81 default_server;
-    listen [::]:81 default_server;
-    server_name _;  # 🔥 Permite qualquer domínio/IP acessar
+    listen 80;
+    listen [::]:80;
+    server_name ${DOMAIN};
 
     location / {
-        proxy_pass http://open-webui:8080/;
+        proxy_pass http://open-webui:8181;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -14,7 +14,7 @@ server {
     }
 
     location /ollama/ {
-        proxy_pass http://ollama:11434/;  # 🔥 Corrigida a porta interna do Ollama
+        proxy_pass http://ollama:11435;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,15 +23,12 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name _;  # 🔥 Permite qualquer domínio/IP acessar
-
-    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    listen 443;
+    listen [::]:443;
+    server_name ${DOMAIN};
 
     location / {
-        proxy_pass http://open-webui:8080/;
+        proxy_pass http://open-webui:8181;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -41,7 +38,7 @@ server {
     }
 
     location /ollama/ {
-        proxy_pass http://ollama:11434/;  # 🔥 Corrigida a porta interna do Ollama
+        proxy_pass http://ollama:11435;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
