--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,5 @@
 server {
-    listen 81;
-    listen [::]:81;
+    listen 80;
     server_name ${DOMAIN};
 
     location / {
@@ -14,7 +13,7 @@ server {
     }
 
     location /ollama/ {
-        proxy_pass http://ollama:11434;
+        proxy_pass http://ollama:11434/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,7 +23,6 @@ server {
 
 server {
     listen 443;
-    listen [::]:443;
     server_name ${DOMAIN};
 
     location / {
@@ -38,7 +36,7 @@ server {
     }
 
     location /ollama/ {
-        proxy_pass http://ollama:11434;
+        proxy_pass http://ollama:11434/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
