--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,11 @@ services:
     restart: unless-stopped
     environment:
       - OLLAMA_HOST=0.0.0.0
+      - OLLAMA_ORIGIN=*
     volumes:
       - ./ollama-data:/root/.ollama
     ports:
-      - "11435:11434"
+      - "11434:11434"
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
@@ -51,9 +52,10 @@ services:
     container_name: open-webui
     restart: unless-stopped
     depends_on:
-      - ollama
+      ollama:
+        condition: service_healthy
     environment:
-      - OLLAMA_BASE_URLS=http://ollama:11434
+      - OLLAMA_BASE_URL=http://ollama:11434
       - WEBUI_AUTH=False
       - WEBUI_SECRET_KEY=t0p-s3cr3t
     ports:
