--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: nginx
     restart: unless-stopped
     ports:
-      - "80:80"       # HTTP
-      - "443:443"     # HTTPS
+      - "80:80"
+      - "443:443"
     depends_on:
       - ollama
       - open-webui
@@ -22,30 +22,37 @@ services:
     restart: unless-stopped
     environment:
       - OLLAMA_HOST=0.0.0.0
-      - OLLAMA_ORIGIN=*
     volumes:
       - ./ollama-data:/root/.ollama
     ports:
       - "11434:11434"
+
+  ollama-model-loader:
+    image: docker:latest 
+    container_name: ollama-model-loader
+    depends_on:
+      - ollama
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock 
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
-        echo "🚀 Iniciando Ollama..."
-        ollama serve &   # Inicia o Ollama em background
-        sleep 10         # Aguarda a inicialização
-        echo "📥 Baixando modelos..."
-        for model in "gemma:2b" "deepseek-r1:1.5b" "qwen2.5-coder:1.5b" "codegemma:2b" "phi4-mini" "phi4" "llama3.3" "qwen2.5:14b" "qwen2.5-coder:14b"; do
-          echo "➡️ Baixando $$model..."
-          ollama pull $$model || echo "⚠️ Erro ao baixar $$model, ignorando..."
+        echo "⏳ Aguardando o Ollama iniciar..."
+        until docker exec ollama ollama list >/dev/null 2>&1; do
+            sleep 2
         done
-        echo "✅ Modelos baixados! Servidor Ollama pronto."
-        wait
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:11434/api/tags || exit 1"]
-      interval: 30s      # Aumentado para 30s
-      timeout: 10s       # Aumentado para 10s
-      retries: 10        # Tentar por mais tempo
-      start_period: 60s  # Dar mais tempo para o Ollama iniciar
+        echo "📥 Baixando modelos dentro do container Ollama..."
+        docker exec ollama ollama pull gemma:2b
+        docker exec ollama ollama pull deepseek-r1:1.5b
+        docker exec ollama ollama pull qwen2.5-coder:1.5b
+        docker exec ollama ollama pull codegemma:2b
+        docker exec ollama ollama pull phi4-mini
+        docker exec ollama ollama pull phi4
+        docker exec ollama ollama pull llama3.3
+        docker exec ollama ollama pull qwen2.5:14b
+        docker exec ollama ollama pull qwen2.5-coder:14b
+        echo "✅ Modelos baixados. Encerrando..."
+    restart: "no"
 
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
@@ -53,9 +60,10 @@ services:
     restart: unless-stopped
     depends_on:
       ollama:
-        condition: service_healthy
+        condition: service_started
     environment:
-      - OLLAMA_BASE_URL=http://ollama:11434
+      - OLLAMA_BASE_URLS=http://ollama:11434
+      - ENV=dev
       - WEBUI_AUTH=False
       - WEBUI_SECRET_KEY=t0p-s3cr3t
     ports:
