--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,8 @@ services:
             sleep 2
         done
         echo "📥 Baixando modelos dentro do container Ollama..."
-        docker exec ollama ollama pull gemma:2b
+        docker exec ollama ollama pull gemma3:27b
+        docker exec ollama ollama pull qwq:32b
         docker exec ollama ollama pull deepseek-r1:1.5b
         docker exec ollama ollama pull qwen2.5-coder:1.5b
         docker exec ollama ollama pull codegemma:2b
