--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
     image: ghcr.io/open-webui/open-webui:main
     container_name: open-webui
     restart: unless-stopped
+    entrypoint: /bin/sh
+    tty: true
+    stdin_open: true
     depends_on:
       ollama:
         condition: service_started
